# useless_box

./: .gitignore  README.md  readme.md
arduino/: Makefile  useless_box.ino
arduino/example_morse/: morse.cpp  morse.h  morse.ino
arduino/useless_box/: Makefile  useless_box.ino
arduino/useless_box_systemtest/: Makefile  useless_box.ino
arduino/useless_box_systemtest/sketch/: Makefile  box_button.cpp  box_potentiometer.cpp  box_servomotor.cpp  box_systemtest.cpp  box_systemtest.hpp
arduino/uselessbox_systemtest/: Makefile  useless_box.ino
include/: Arduino.h  Serial.h  Servo.h  ardunio_namespace.h  box_button.hpp  box_controller.hpp  box_gearmotor.hpp  box_main.hpp  box_mode_awareness.hpp  box_mode_function_jitter.hpp  box_mode_manager.hpp  box_mode_normal.hpp  box_mode_reset.hpp  box_mode_start_sequence.hpp  box_mode_startup.hpp  box_mode_wakeup.hpp  box_potentiometer.hpp  box_servomanager.hpp  box_servomotor.hpp  box_sonar.hpp  box_switch.hpp  box_systemtest.hpp  box_ultrasonic.hpp  box_wait.hpp  log.h  ub_gearmotor.hpp  ub_main.hpp  ub_motor.hpp  ub_servomotor.hpp  ub_switch.hpp  ub_ultrasonic.hpp
include/manager/: box_mode_manager.hpp  box_servo_manager.hpp  box_wait_manager.hpp
include/modes/: box_mode_awareness.hpp  box_mode_function_jitter.hpp  box_mode_reset.hpp  box_mode_startup.hpp  box_submode_function_jitter.hpp
include/peripheral/: box_servomotor.hpp  box_sonar.hpp  box_switch.hpp
libs/: Arduino.h  orig_Servo.cpp
src/: Serial.cpp  box_button.cpp  box_controller.cpp  box_gearmotor.cpp  box_main.cpp  box_mode_awareness.cpp  box_mode_function_jitter.cpp  box_mode_manager.cpp  box_mode_normal.cpp  box_mode_reset.cpp  box_mode_start_sequence.cpp  box_mode_startup.cpp  box_mode_wakeup.cpp  box_potentiometer.cpp  box_servomanager.cpp  box_servomotor.cpp  box_sonar.cpp  box_switch.cpp  box_systemtest.cpp  box_ultrasonic.cpp  box_wait.cpp  ub_gearmotor.cpp  ub_main.cpp  ub_motor.cpp  ub_servomotor.cpp  ub_switch.cpp  ub_ultrasonic.cpp
src/manager/: box_mode_manager.cpp  box_servo_manager.cpp  box_wait_manager.cpp
src/modes/: box_mode_awareness.cpp  box_mode_function_jitter.cpp  box_mode_reset.cpp  box_mode_startup.cpp  box_submode_function_jitter.cpp
src/peripheral/: box_servomotor.cpp  box_sonar.cpp  box_switch.cpp
test/: CMakeLists.txt  test_ub_gearmotor.cpp  test_ub_main.cpp  test_ub_motor.cpp  test_ub_servomotor.cpp  test_ub_switch.cpp  test_ub_ultrasonic.cpp  ut_box_button.cpp  ut_box_controller.cpp  ut_box_controller_no_sleep.cpp  ut_box_gearmotor.cpp  ut_box_log.cpp  ut_box_main.cpp  ut_box_mode_awareness.cpp  ut_box_mode_function_jitter.cpp  ut_box_mode_normal.cpp  ut_box_mode_reset.cpp  ut_box_mode_start_sequence.cpp  ut_box_mode_startup.cpp  ut_box_mode_wakeup.cpp  ut_box_potentiometer.cpp  ut_box_servomanager.cpp  ut_box_servomotor.cpp  ut_box_sonar.cpp  ut_box_submode_function_jitter.cpp  ut_box_switch.cpp  ut_box_systemtest.cpp  ut_box_ultrasonic.cpp  ut_box_wait.cpp
test/mocks/: mock_arduino.hpp  mock_avr_sleep.hpp  mock_box.hpp  mock_low_power.hpp  mock_serial.hpp  mock_servo.hpp  mock_servomotor.hpp
test/stubs/: Arduino.h  LowPower.cpp  LowPower.h  Serial.cpp  Serial.h  Servo.h
test/stubs/avr/: sleep.h
test/stubs/libs/: orig_Arduino.h  orig_avr_sleep.h
tools/: deploy.sh  deploy_debug_teststate.sh  deploy_systemtest.sh  init_uselessbox_build_framework.sh  onChange_ut.sh  rebuild_and_test_ut.sh  systemtest_deploy.sh  ut.sh
tools/util/: .bashrc
tools/util/vscode_settings/: clean_up_empty_folders.sh
tools/vscode_settings/: keybindings.json  settings.json
